// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end-to-end can successfully register applications and respond to routing events 1`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`end-to-end can successfully register applications and respond to routing events 2`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/app1"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;
